resolve warnings and problems